# paper2_main

./: .gitignore  0_test.ipynb  bgs_build_install.sh  bgslib_build - Copy.sh  bgslib_build.sh  cfg_ds.py  plot.ipynb  profile_output.lprof  profile_output.txt  pyproject.toml  run_eval.py  run_opt.py  test.ipynb  test_cfg.py  tuneview.py  z_ds_block_make.py  zpipe.py  ztemp.py  ztest.py
__archived/: build_bgslibrary_venv.sh  test.py  test2.py  zbase.py  zblocks_speed_test.py  zpipe_bk.py  zprof.py
__archived/_code_refs/: __base_example.yaml  __config_inet.json  _c_test_single.py  _inference.py  algo.md  firedet.cpp  firedet.h  tpt_detect.py
__archived/ben_block_preproc/: zblocks.py
__archived/bgslibrary_example/: demo_framediff_video.py  demo_list_algs.py  demo_multi_bgs.py  demo_show_version.py
__archived/old/: _firedet.py  build_test_ds.py  config_builder.py  gpu_mon.py  performance_table.csv  test.py  test_ram_power.py  test_watt.py  zperfcalc_test.py  ztest_perf_tb.py  zz_config.py
_uv/: pyproject.toml
config/: FrameDifference.xml  base.yaml  opt_cfg.yaml
docs/: __zotero_paper2.url  _system_workflow.md  compare.xlsx  dataset_list.xlsx  proposed.d2  speed_exlude_cap_read.csv  sync.ffs_lock  zzpaper3.xlsx  ~$compare.xlsx
helper/: utils.py
inet_temporal/: config.json
prof_train/: c_train.bat  c_train.py
scripts/: bgs_build_install.sh  venv_mk.bat
temporal/: config.py  config_bk.py  custom_exp.py  det_base.py  det_proposed.py  metrics.py  our_exp.py  res_hdl.py  rs_handler.py  tiny_cnn.py  utils.py  zpipe.py
zreport/: report_all.csv  sync.ffs_lock
(+97 files in other folders)
