[project]
name = "paper2_main"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.6"

dependencies = [
    "halib",
    "wandb==0.21.0",
    "timm==1.0.16",
    "fiftyone==1.2.0",
    "pip>=25.2",
    "ipykernel>=6.30.1",
    "ptpython>=3.0.30",
    "torchmetrics>=1.8.1",
    "numpy",
    "opencv-python",
    # "pybgs"
    "line-profiler>=5.0.0",
    "pyinstrument>=5.1.1",
    "optuna",
    "optuna-dashboard",

]

[project.optional-dependencies]
cpu = [
    "torch==2.7.1",
    "torchvision==0.22.1",
    "torchaudio==2.7.1",
]
gpu = [
  "torch>=2.7.0",
  "torchvision>=0.22.0",
]

[tool.uv]
conflicts = [
  [
    { extra = "cpu" },
    { extra = "gpu" },
  ],
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu118", extra = "gpu" },
]
torchvision = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu118", extra = "gpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

# TO install CPU torch: uv sync --extra cpu
# TO install GPU torch: uv sync --extra gpu